--- a/style.css
+++ b/style.css
@@ -75,6 +75,23 @@ nav {
   transition: all 0.3s;
 }
 
+.logout__btn {
+  border: none;
+  padding: 5px 10px;
+  border-radius: 0.7rem;
+  font-size: 1.8rem;
+  background-color: rgb(196, 71, 71);
+  cursor: pointer;
+  transition: all 0.3s;
+  color: white;
+  display: none;
+}
+
+.logout__btn:focus {
+  outline: none;
+  color: #777;
+}
+
 .login__btn:hover,
 .login__btn:focus,
 .btn--sort:hover,
@@ -94,7 +111,7 @@ nav {
   gap: 2rem;
 
   /* NOTE This creates the fade in/out anumation */
-  /* opacity: 0; */
+  opacity: 0;
   transition: all 1s;
 }
 
